fix: Sonar fixes
Refs: XRDDEV-1689